chore: run tests converage on gh actions
doc: add readme

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     strategy:
@@ -22,3 +22,31 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run test
+
+  coverage:
+    needs: [test]
+
+    # run build on latest ubuntu
+    runs-on: ubuntu-latest
+
+    steps:
+      # this will check out the current branch (https://github.com/actions/checkout#Push-a-commit-using-the-built-in-token)
+      - uses: actions/checkout@v2
+      # installing Node
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v1
+        with:
+          # this will use the latest Node 12 version
+          node-version: 14.x
+      # install dependencies using clean install to avoid package lock updates
+      - run: npm ci
+      # build the project if necessary
+      - run: npm run build --if-present
+      # finally run the tests
+      - run: npm run coverage
+
+      # Save coverage report in Coveralls
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
