--- a/package.json
+++ b/package.json
@@ -6,7 +6,22 @@
   "scripts": {
     "dev": "nodemon src/main.ts",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "nyc --reporter=lcov vitest run --coverage"
+  },
+  "nyc": {
+    "all": true,
+    "instrument": true,
+    "extension": [
+      ".ts",
+      ".js"
+    ],
+    "include": [
+      "!config/**/*",
+      "!**/test/**/*",
+      "!**/test.*",
+      "dist/**/*",
+      "src/**/*"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -14,6 +29,7 @@
   "devDependencies": {
     "c8": "^7.11.3",
     "nodemon": "^2.0.16",
+    "nyc": "^15.1.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3",
     "vitest": "^0.14.2"
