--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     ],
     "include": [
       "!config/**/*",
-      "!**/test/**/*",
+      "!**/tests/**/*",
       "!**/test.*",
       "dist/**/*",
       "src/**/*"
